--- a/css/styles.css
+++ b/css/styles.css
@@ -169,6 +169,7 @@ p .small{
   align-items: center;
   color: var(--dark);
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .page-header-container a{
   padding-top: 24px;
@@ -213,6 +214,21 @@ p .small{
 .menu-link:hover,
 .menu-link:focus{
   color: var(--accent-color-pressed-state);
+}
+.current {
+  position: relative;
+  color: #404bbf; 
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.current::after{
+  content: '';
+  position: absolute; 
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* ==== LOGO === */
 .logo{
@@ -260,9 +276,11 @@ p .small{
   display: block;
   background-color: var(--dark);
   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
-  width: 1440px;
+  max-width: 1440px;
   background-repeat: no-repeat;
   position: relative;
+  background-position: center;
+  background-size: cover;
   text-align: center;
   color: white;
   margin-left: auto;
@@ -292,6 +310,7 @@ p .small{
   border-radius: 4px;
   background-color: #4D5AE5;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn:hover,
 .btn:active,
@@ -317,6 +336,22 @@ p .small{
 .description-benefits{
   color: var(--primary-text-color);
 }
+
+/* === svg === */
+.advantages-block {
+  display: flex;
+  height: 112px;
+  border-radius: 4px;
+  background-color: #f4f4fd;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 8px;
+}
+.advantages-icon {
+  fill: var(--dark);
+}
+
+
 /* ================= SECTION-3 ================= */
 .category-product{
   padding-bottom: 120px;
@@ -356,6 +391,8 @@ p .small{
 }
 .card-employee-desc{
   padding: 32px 16px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 .card-employee-name{
   text-align: center;
@@ -368,6 +405,74 @@ p .small{
   padding: 32px 16px;
 }
 
+/* === svg === */
+.social-card-menu-icon{
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.social-card-icon{
+  width: 40px;
+  height: 40px;
+}
+.card-socials-link{
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.card-socials-link:hover,
+.card-socials-link:focus{
+  background-color: #404bbf;
+}
+.card-socials-icon{
+  fill: var(--light);
+}
+
+/* ================= SECTION-5 ================= */
+.customers{
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.customers-block{ 
+}
+.customers-block-text{
+  font-size: 36px;
+  line-height: 1.11;
+  color: var(--dark);
+  margin-bottom: 72px;
+}
+.customers-list{
+  display: flex;
+  gap: 24px;
+}
+.customers-item{
+  width: calc((100% - 120px) / 6);
+  height: 88px;
+}
+.customers-link{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  color: var(--subtle-text);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.customers-link:hover,
+.customers-link:focus{
+  border-color: #404bbf;
+  color: #404bbf;
+}
+.customers-icon{
+  fill: currentColor
+}
 
 /* ================= FOOTER ================= */
 .footer-bg{
@@ -379,6 +484,9 @@ p .small{
   display: flex;
   flex-direction: row;
   gap: 120px;
+  align-items: baseline;
+  margin-right: 120px;
+
 }
 .logo-footer{
   display: flex;
@@ -400,6 +508,7 @@ p .small{
 }
 .social{
   display: flex;
+
 }
 
 .social-name {
@@ -408,6 +517,9 @@ p .small{
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  color: var(--primary-color-white);
+  margin-bottom: 16px;
+
 }
 
 .social-list {
@@ -418,17 +530,36 @@ p .small{
 
 .social-icon {
   display: flex;
+  gap: 16px;
   justify-content: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
   border-radius: 50%;
   background-color: #4D5AE5;
 }
+.social-list-item{
+  width: 40px;
+  height: 40px;
+}
+.social-list-link{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: var(--primary-brand);
+  border-radius: 50%;
+}
 
-.social-list-icon {
+.social-list-icon{
   fill: #ffffff;
   transition: fill var(--transition-duration-and-func);
+}
+.social-list-icon:hover,
+.social-list-icon:focus{
+  background-color: #31d0aa;
+}
+.social-list-icon{
+  fill: var(--light);
 }
 
 .social-icon:hover .social-list-icon,
