--- a/css/styles.css
+++ b/css/styles.css
@@ -571,47 +571,67 @@ p .small{
 .backdrop {
   position: fixed;
   top: 0;
+  left: 0;
+  background-color: rgba(46, 47, 66, 0.4)
   width: 100%;
   height: 100%;
-  background-color: rgba(72, 67, 60, 0.508);
-  /* display: flex;
-  align-items: center;
-  justify-content: center; */
-  transition: opacity 300ms linear, visibility 300ms linear;
-}
-
-.modal {
-  width: 517px;
-  min-height: 794px;
-  background-color: #fafafa;
-  border-radius: 15px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%) scaleX(1);
-  transition: transform 300ms linear;
-  /* margin: auto; */
-}
-
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scaleX(5);
-}
-
-.modal-close-btn {
-  border: none;
-  background: transparent;
-  width: 28px;
-  height: 28px;
-  position: absolute;
-  top: 24px;
-  right: 24px;
-  cursor: pointer;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  width: 408px;
+  min-height: 584px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  background-color: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/*.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scaleX(5);
+}*/
+
+.modal-close-btn{
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+  top: 24px;
+  right: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: #e7e9fc;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  padding: 0;
+  cursor: pointer;
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus{
+  background-color: #404bbf;
+  border: none;
+}
+
+.modal-icon{
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-icon:hover,
+.modal-icon:focus{
+  fill: #ffffff;
 }
 
 /* ================= PORTFOLIO ================= */
