--- a/css/styles.css
+++ b/css/styles.css
@@ -215,7 +215,7 @@ p .small{
 .menu-link:focus{
   color: var(--accent-color-pressed-state);
 }
-.current {
+.current{
   position: relative;
   color: #404bbf; 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -390,7 +390,6 @@ p .small{
   border-radius: 0px 0px 4px 4px;
 }
 .card-employee-desc{
-  padding: 32px 16px;
   padding-top: 32px;
   padding-bottom: 32px;
 }
@@ -451,8 +450,10 @@ p .small{
   gap: 24px;
 }
 .customers-item{
-  width: calc((100% - 120px) / 6);
   height: 88px;
+}
+.customers-item li{
+  width: calc((100% - 120px) / 6);
 }
 .customers-link{
   display: flex;
@@ -568,24 +569,24 @@ p .small{
 }
 
 /* ================= MODAL ================= */
-.backdrop {
+.backdrop{
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(46, 47, 66, 0.4)
+  background-color: rgba(46, 47, 66, 0.4);
   width: 100%;
   height: 100%;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 
-.is-hidden {
+.is-hidden{
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
 }
 
-.modal {
+.modal{
   position: absolute;
   width: 408px;
   min-height: 584px;
@@ -597,10 +598,6 @@ p .small{
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-/*.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scaleX(5);
-}*/
 
 .modal-close-btn{
   display: flex;
@@ -625,12 +622,12 @@ p .small{
   border: none;
 }
 
-.modal-icon{
+.modal-icon-close{
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-icon:hover,
-.modal-icon:focus{
+.modal-icon-close:hover,
+.modal-icon-close:focus{
   fill: #ffffff;
 }
 
