--- a/css/styles.css
+++ b/css/styles.css
@@ -662,6 +662,15 @@ p .small{
   color: #ffffff;
   background-color: #404BBF;
   border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+.filter-btn-link{
+  display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.filter-btn-link:hover,
+.filter-btn-link:focus{
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 /* ================= SECTION-2 ================= */
 .cards-product-list{
@@ -673,6 +682,29 @@ p .small{
 .cards-product-item{
   width: calc((100% - 48px) / 3);
 }
+.cards-product-link{
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.cards-product-img-block{
+  position: relative;
+  overflow: hidden;
+}
+
+.cards-product-descriptions{
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--light);
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .cards-product-desc{
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
@@ -692,5 +724,9 @@ p .small{
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
+}
+.cards-product-descriptions:hover,
+.cards-product-descriptions:focus{
+  transform: translateY(0%);
 }
 /* ================= PORTFOLIO ================= */
