--- a/css/styles.css
+++ b/css/styles.css
@@ -230,6 +230,9 @@ p .small{
   border-radius: 2px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.forse{
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 /* ==== LOGO === */
 .logo{
   font-family: var(--secondary-font-family-family);
@@ -448,13 +451,12 @@ p .small{
 .customers-list{
   display: flex;
   gap: 24px;
+  width: calc((100% - 120px) / 6);
 }
 .customers-item{
   height: 88px;
 }
-.customers-item li{
-  width: calc((100% - 120px) / 6);
-}
+
 .customers-link{
   display: flex;
   align-items: center;
