--- a/css/styles.css
+++ b/css/styles.css
@@ -204,6 +204,7 @@ p .small{
 .menu-link{
   font-family: var(--main-font-family);
   font-style: normal;
+  position: relative;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
@@ -227,10 +228,12 @@ p .small{
   bottom: -1px;
   height: 4px;
   background-color: #404bbf;
+  color: #404bbf;
   border-radius: 2px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.forse{
+
+.flow{
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* ==== LOGO === */
@@ -451,10 +454,11 @@ p .small{
 .customers-list{
   display: flex;
   gap: 24px;
-  width: calc((100% - 120px) / 6);
 }
+
 .customers-item{
   height: 88px;
+  width: calc((100% - 120px) / 6);
 }
 
 .customers-link{
@@ -483,14 +487,17 @@ p .small{
   padding-top: 100px;
   padding-bottom: 100px;
 }
-.footer-content{
+.footer-container{
   display: flex;
+  align-items: baseline;
+}
+
+.footer-content{
   flex-direction: row;
   gap: 120px;
-  align-items: baseline;
   margin-right: 120px;
-
 }
+
 .logo-footer{
   display: flex;
   font-family: "Raleway", sans-serif;
@@ -618,12 +625,6 @@ p .small{
   cursor: pointer;
 }
 
-.modal-close-btn:hover,
-.modal-close-btn:focus{
-  background-color: #404bbf;
-  border: none;
-}
-
 .modal-icon-close{
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -634,6 +635,7 @@ p .small{
 }
 
 /* ================= PORTFOLIO ================= */
+
 
 /* ================= MAIN ================= */
 /* ================= SECTION-1 ================= */
@@ -659,6 +661,7 @@ p .small{
   border-radius: 4px;
   border: 1px solid #e7e9fc;
 }
+
 .menu-filter-btn:hover,
 .menu-filter-btn:focus{
   color: #ffffff;
