--- a/css/styles.css
+++ b/css/styles.css
@@ -649,7 +649,16 @@ p .small{
   gap: 24px;
   margin-bottom: 72px;
 }
+
+.menu-filter-item:hover,
+.menu-filter-item:focus{
+  color: #ffffff;
+  background-color: #404BBF;
+  border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12); 
+}
 .menu-filter-btn{
+  display: block;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -664,11 +673,9 @@ p .small{
 
 .menu-filter-btn:hover,
 .menu-filter-btn:focus{
-  color: #ffffff;
-  background-color: #404BBF;
-  border: 1px solid transparent;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
 .filter-btn-link{
   display: block;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -691,12 +698,18 @@ p .small{
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.cards-product-link p:hover,
+.cards-product-link p:focus{
+  transform: translateY(0%);
+}
+
 .cards-product-img-block{
   position: relative;
   overflow: hidden;
 }
 
 .cards-product-descriptions{
+  position: absolute;
   top: 0;
   font-size: 16px;
   line-height: 1.5;
@@ -704,8 +717,8 @@ p .small{
   color: var(--light);
   padding: 40px 32px;
   background-color: #4d5ae5;
-  height: 100%;
   width: 100%;
+  height: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
