--- a/css/styles.css
+++ b/css/styles.css
@@ -693,8 +693,10 @@ p .small{
 }
 .cards-product-item{
   width: calc((100% - 48px) / 3);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .cards-product-link{
+  display: block; 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -703,12 +705,17 @@ p .small{
   transform: translateY(0%);
 }
 
+.cards-product-link:hover,
+.cards-product-link:focus{
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .cards-product-img-block{
   position: relative;
   overflow: hidden;
 }
 
-.cards-product-descriptions{
+.cards-product-descriptions p{
   position: absolute;
   top: 0;
   font-size: 16px;
