--- a/css/styles.css
+++ b/css/styles.css
@@ -458,6 +458,8 @@ p .small{
 
 .customers-item{
   height: 88px;
+}
+.customers-item li:first-child{
   width: calc((100% - 120px) / 6);
 }
 
@@ -558,6 +560,12 @@ p .small{
   height: 100%;
   background-color: var(--primary-brand);
   border-radius: 50%;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-list-link:hover,
+.social-list-link:focus{
+  background-color: #31d0aa;
 }
 
 .social-list-icon{
@@ -625,12 +633,18 @@ p .small{
   cursor: pointer;
 }
 
+.modal-close-btn:hover,
+.modal-close-btn:focus{
+  background-color: #404bbf;
+  border: none;
+}
+
 .modal-icon-close{
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-icon-close:hover,
-.modal-icon-close:focus{
+.modal-close-btn:hover,
+.modal-close-btn:focus{
   fill: #ffffff;
 }
 
@@ -652,6 +666,7 @@ p .small{
 
 .menu-filter-item:hover,
 .menu-filter-item:focus{
+  display: block;
   color: #ffffff;
   background-color: #404BBF;
   border: 1px solid transparent;
@@ -680,10 +695,7 @@ p .small{
   display: block;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.filter-btn-link:hover,
-.filter-btn-link:focus{
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
+
 /* ================= SECTION-2 ================= */
 .cards-product-list{
   display: flex;
