--- a/css/styles.css
+++ b/css/styles.css
@@ -688,7 +688,7 @@ p .small{
 
 .menu-filter-btn:hover,
 .menu-filter-btn:focus{
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .filter-btn-link{
@@ -727,7 +727,7 @@ p .small{
   overflow: hidden;
 }
 
-.cards-product-descriptions p{
+.cards-product-descriptions-desc{
   position: absolute;
   top: 0;
   font-size: 16px;
@@ -741,7 +741,6 @@ p .small{
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .cards-product-desc{
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
