--- a/css/styles.css
+++ b/css/styles.css
@@ -455,11 +455,8 @@ p .small{
   gap: 24px;
 }
 
-.customers-item{
+.customers-list-item{
   height: 88px;
-}
-
-.customers-item-1{
   width: calc((100% - 120px) / 6);
 }
 .customers-link{
@@ -706,10 +703,6 @@ p .small{
 .cards-product-link p:hover,
 .cards-product-link p:focus{
   transform: translateY(0%);
-}
-
-.cards-product-link:hover,
-.cards-product-link:focus{
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
