--- a/css/styles.css
+++ b/css/styles.css
@@ -455,7 +455,7 @@ p .small{
   gap: 24px;
 }
 
-.customers-list-item{
+.cut{
   height: 88px;
   width: calc((100% - 120px) / 6);
 }
@@ -675,6 +675,11 @@ p .small{
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.menu-filter-btn-1:hover,
+.menu-filter-btn-1:focus{
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
 .menu-filter-btn:hover,
 .menu-filter-btn:focus{
   display: block;
@@ -728,6 +733,11 @@ p .small{
   width: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.cards-product-descriptions:hover,
+.cards-product-descriptions:focus{
+  transform: translateY(0%);
 }
 
 .cards-product-link p:hover{
