--- a/css/styles.css
+++ b/css/styles.css
@@ -720,9 +720,10 @@ p .small{
   overflow: hidden;
 }
 
-.cards-product-descriptions{
+.overlay-descriptions{
   position: absolute;
   top: 0;
+  left: 0;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -733,6 +734,7 @@ p .small{
   width: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow: auto;
 }
 
 .cards-product-descriptions:hover,
