--- a/css/styles.css
+++ b/css/styles.css
@@ -673,18 +673,13 @@ p .small{
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu-filter-btn-1:hover,
-.menu-filter-btn-1:focus{
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.menu-filter-btn:hover,
-.menu-filter-btn:focus{
+.filter-btn:hover,
+.filter-btn:focus{
   display: block;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   color: #ffffff;
   background-color: #404BBF;
   border: 1px solid transparent;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08)
 }
 
 /* ================= SECTION-2 ================= */
@@ -701,6 +696,8 @@ p .small{
 .cards-product-item:hover,
 .cards-product-item:focus{
   transform: translateY(0%);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08)
+
 }
 .cards-product-link{
   display: block; 
