--- a/css/styles.css
+++ b/css/styles.css
@@ -696,20 +696,15 @@ p .small{
 }
 .cards-product-item:hover,
 .cards-product-item:focus{
-  transform: translateY(0%);
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08)
-
-}
-.cards-product-link{
   display: block; 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.cards-product-item:hover,
-.cards-product-item:focus{
   transform: translateY(0%);
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08)
 }
+/*.cards-product-link{
+  display: block; 
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}*/
 
 .cards-product-img-wrapper{
   position: relative;
@@ -736,7 +731,11 @@ p .small{
 .cards-product-link:hover .overlay-descriptions,
 .cards-product-link:focus .overlay-descriptions{
   transform: translateY(0%);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
+
+
 
 .cards-product-descriptions-desc{
   font-size: 16px;
