--- a/css/styles.css
+++ b/css/styles.css
@@ -701,10 +701,10 @@ p .small{
   transform: translateY(0%);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08)
 }
-/*.cards-product-link{
+.cards-product-link{
   display: block; 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}*/
+}
 
 .cards-product-img-wrapper{
   position: relative;
@@ -733,8 +733,6 @@ p .small{
   transform: translateY(0%);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-
-
 
 
 .cards-product-descriptions-desc{
