--- a/css/styles.css
+++ b/css/styles.css
@@ -731,9 +731,12 @@ p .small{
 .cards-product-link:hover .overlay-descriptions,
 .cards-product-link:focus .overlay-descriptions{
   transform: translateY(0%);
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
+.cards-product-link:hover,
+.cards-product-link:focus{
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 
 .cards-product-descriptions-desc{
   font-size: 16px;
