--- a/css/styles.css
+++ b/css/styles.css
@@ -544,21 +544,11 @@ p .small{
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-link:hover,
-.social-list-link:focus{
+.social-list-link a:hover,
+.social-list-link a:focus {
   background-color: #31d0aa;
-}
-
-.social-list-icon{
-  fill: #ffffff;
-  transition: fill var(--transition-duration-and-func);
-}
-.social-list-icon:hover,
-.social-list-icon:focus{
-  background-color: #31d0aa;
-}
-.social-list-icon{
   fill: var(--light);
+  transition: fill var(--transition-duration-and-func);
 }
 
 .social-icon:hover .social-list-icon,
