--- a/css/styles.css
+++ b/css/styles.css
@@ -544,8 +544,8 @@ p .small{
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-link a:hover,
-.social-list-link a:focus {
+.social-list-link:hover,
+.social-list-link:focus {
   background-color: #31d0aa;
   fill: var(--light);
   transition: fill var(--transition-duration-and-func);
