--- a/css/styles.css
+++ b/css/styles.css
@@ -462,7 +462,7 @@ p .small{
   color: #404bbf;
 }
 .customers-icon{
-  fill: currentColor
+  fill: currentColor;
 }
 
 /* ================= FOOTER ================= */
@@ -541,11 +541,11 @@ p .small{
   height: 100%;
   background-color: var(--primary-brand);
   border-radius: 50%;
-   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-link:hover,
-.social-list-link:focus {
+.social-list-link:hover + .social-list-link,
+.social-list-link:focus + .social-list-link {
   background-color: #31d0aa;
   fill: var(--light);
   transition: fill var(--transition-duration-and-func);
