--- a/css/styles.css
+++ b/css/styles.css
@@ -544,10 +544,13 @@ p .small{
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-link:hover + .social-list-link,
-.social-list-link:focus + .social-list-link {
+.social-list-link:hover,
+.social-list-link:focus {
   background-color: #31d0aa;
   fill: var(--light);
+}
+
+.social-list-link{
   transition: fill var(--transition-duration-and-func);
 }
 
