--- a/css/styles.css
+++ b/css/styles.css
@@ -544,16 +544,22 @@ p .small{
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-link:hover,
-.social-list-link:focus {
-  background-color: #31d0aa;
+.social-list-icon{
   fill: var(--light);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.social-list-link:hover,
+.social-list-link:focus{
+  background-color: #31d0aa;
+}
+
+.social-list-icon{
+  fill: #ffffff;
   transition: fill var(--transition-duration-and-func);
 }
 
-/*.social-list-icon{
-  transition: fill var(--transition-duration-and-func);
-}*/
 
 .social-icon:hover .social-list-icon,
 .social-icon:focus .social-list-icon {
