--- a/css/styles.css
+++ b/css/styles.css
@@ -541,7 +541,11 @@ p .small{
   height: 100%;
   background-color: var(--primary-brand);
   border-radius: 50%;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /*transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+*/}
+
+.social-list-link::after{
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-list-link:hover,
