--- a/css/styles.css
+++ b/css/styles.css
@@ -198,7 +198,7 @@ p .small{
 }
 .menu-link:hover,
 .menu-link:focus{
-  color: var(--accent-color-pressed-state);
+  color: #404bbf;
 }
 .current{
   position: relative;
@@ -541,10 +541,6 @@ p .small{
   height: 100%;
   background-color: var(--primary-brand);
   border-radius: 50%;
-  /*transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-*/}
-
-.social-list-link::after{
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
