--- a/css/styles.css
+++ b/css/styles.css
@@ -214,6 +214,7 @@ a.logo.link {
   position: absolute; 
   left: 0;
   bottom: -1px;
+  width: 100%;
   height: 4px;
   background-color: #404bbf;
   color: #404bbf;
