--- a/css/styles.css
+++ b/css/styles.css
@@ -216,6 +216,7 @@ a.logo.link {
   bottom: -1px;
   width: 100%;
   height: 4px;
+  border-radius: 50%;
   background-color: #404bbf;
   color: #404bbf;
   border-radius: 2px;
