--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,6 @@ a.logo.link {
   display: block;
   padding-top: 24px;
   padding-bottom: 24px;
-  color: var(--dark);
 }
 
 .page-header-container{
@@ -221,6 +220,10 @@ a.logo.link {
   color: #404bbf;
   border-radius: 2px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-item a{
+  color: var(--dark);
 }
 
 .flow{
