--- a/css/styles.css
+++ b/css/styles.css
@@ -560,6 +560,7 @@ a.logo.link {
   background-color: #31d0aa;
   fill: var(--light);
   transition: fill var(--transition-duration-and-func);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon:hover .social-list-icon,
